<resources>
    <string name="app_name">General Quiz</string>
    <string name="your_name">Enter your name &amp; ID</string>
    <string name="enter_your_name">Enter Your First Name</string>
    <string name="enter_your_ID">ID</string>
    <string name="start_quiz">Start Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Q1">Q1: How many letters are there in the English alphabet?</string>
    <string name="_26_letter">26 letter</string>
    <string name="_27_letter">27 letter</string>
    <string name="_25_letter">25 letter</string>
    <string name="_24_letter">24 letter</string>
    <string name="next_question">Next Question</string>
    <string name="Q2">Q2: How many days are there in a week?</string>
    <string name="Nine_days">9 Days</string>
    <string name="Five_days">5 Days</string>
    <string name="Seven_days">7 Days</string>
    <string name="Eight_days">8 Days</string>
    <string name="Q3">Q3: How many hours are there in a day?</string>
    <string name="Hours24">24 Hours</string>
    <string name="Hours23">23 Hours</string>
    <string name="Hours26">26 Hours</string>
    <string name="Hours25">25 Hours</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="q5">Q5</string>
    <string name="q6">Q6</string>
    <string name="Q4">Q4: Rainbow consist of how many colours?</string>
    <string name="Colors9">9 Colors</string>
    <string name="Colors6">6 Colors</string>
    <string name="Colors7">7 Colors</string>
    <string name="Colors5">5 Colors</string>
    <string name="Q5">Q5: Which animal is known as the \'Ship of the Desert\"?</string>
    <string name="The_Sheep">The sheep</string>
    <string name="The_Camel">The Camel</string>
    <string name="The_Lion">The Lion</string>
    <string name="The_Bear">The Bear</string>
    <string name="Q6">Q6: Name the biggest continent in the world?</string>
    <string name="Europe">Europe</string>
    <string name="South_America">South America</string>
    <string name="Africa">Africa</string>
    <string name="Asia">Asia</string>
    <string name="title_activity_finish">FinishActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="finish">Finish</string>
    <string name="Re_attempt_Quiz">Re-Attempt Quiz</string>
    <string name="Rate_the_app">Rate App</string>
    <string name="show_score">Show Score</string>
    <string name="list">List</string>
    <string name="score_is">Score is:</string>
    <string name="Quit">Quit</string>
    <string name="Home">Home</string>
    <string name="name">Name</string>
    <string name="The_score">The Score</string>
    <string name="enter_rate_out_of_5">Enter rate out of 5</string>
    <string name="rate_app">Rate App</string>
    <string name="done">Done</string>
    <string name="correct_answer">Correct Answer !</string>
    <string name="continue1">Continue</string>
    <string name="Continue">Continue</string>
    <string name="Wrong_answer">Wrong Answer !</string>
    <string name="Try_Again">Try Again</string>
    <string name="score_1">Score +1</string>
</resources>