<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthFragment">


    <FrameLayout
        android:id="@+id/F5"
        android:layout_width="350dp"
        android:layout_height="520dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q5"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp">

            <RadioButton
                android:id="@+id/wrongQ5_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/The_Sheep"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/correctQ5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/The_Camel"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/wrongQ5_li"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/The_Lion"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/wrongQ5_Be"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/The_Bear"
                android:textSize="25sp" />


        </RadioGroup>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>