<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="420dp"
    android:layout_gravity="center"
    tools:context=".FinishActivity">

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/score_is"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/urName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"

        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Score"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/FinalScore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/The_score"
        android:minHeight="48dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/homeF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urName" />

    <Button
        android:id="@+id/Quit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:text="@string/Quit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeF" />

    <Button
        android:id="@+id/homeF"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:text="@string/Home"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalScore" />


</androidx.constraintlayout.widget.ConstraintLayout>