<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <FrameLayout
        android:id="@+id/FMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/NameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/your_name"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.377"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginHorizontal="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.527" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:layout_marginHorizontal="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_ID"
            android:inputType="textPersonName"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />

        <Button
            android:id="@+id/SQ_button"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="450dp"
            android:layout_marginHorizontal="100dp"
            android:text="@string/start_quiz"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            app:layout_constraintVertical_bias="0.767" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>